# hauken

./: .gitignore  CMakeLists.txt  Hauken.pro  Hauken2.pro  Hauken_pi_arm32  README.md  accesshandler.cpp  accesshandler.h  ai.cpp  ai.h  arduino.cpp  arduino.h  arduinooptions.cpp  arduinooptions.h  asciitranslator.cpp  asciitranslator.h  audiooptions.cpp  audiooptions.h  audioplayer.cpp  audioplayer.h  audiorecorder.cpp  audiorecorder.h  autorecorderoptions.cpp  autorecorderoptions.h  cameraoptions.cpp  cameraoptions.h  camerarecorder.cpp  camerarecorder.h  changelog.cpp  config.cpp  config.h  customplotcontroller.cpp  customplotcontroller.h  dailysummarystatistics.cpp  dailysummarystatistics.h  datastreamammos.cpp  datastreamammos.h  datastreamaudio.cpp  datastreamaudio.h  datastreambaseclass.cpp  (+114 more)
SimpleMail/: mimeinlinefile.cpp  mimeinlinefile.h  smtpexports.h
cmake/: GitVersion.cmake
icons/: favicon.rc
libs/: libfftw3-3.lib  opencv_core490.lib  opencv_core490d.lib  opencv_dnn490.lib  opencv_dnn490d.lib  opencv_highgui490.lib  opencv_highgui490d.lib  opencv_imgcodecs490.lib  opencv_imgcodecs490d.lib  opencv_imgproc490.lib  opencv_imgproc490d.lib  opencv_videoio490.lib  opencv_videoio490d.lib  quazip1-qt6.lib  quazip1-qt6d.lib
qtmqtt/: Qt6Mqtt.exp  Qt6Mqtt.lib  Qt6Mqtt.prl  libQt5Mqtt.la
qtmqtt/include/QtMqtt/.syncqt_staging/: qtmqttversion.h
qtmqtt5/: libQt5Mqtt.prl
qtmqtt5/include/QtMqtt/: qmqttglobal.h
qtmqtt5/src/build-mqtt-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: Makefile.Debug  Makefile.Release
qtmqtt5/src/build-mqtt-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
qtmqtt5/src/build-mqtt-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: QAbstractSocket.8FD3C10A617F3EF1.idx  QBasicTimer.D2DF7588C8FA6B61.idx  QBuffer.1D4EA3E90D9B62F0.idx  QByteArray.18CF3BB963AC5E6E.idx  QExplicitlySharedDataPointer.59F206A859480264.idx  QFlags.3C2E89A33842A91B.idx  QHash.A1013EA091FA2625.idx  QIODevice.2A1A282F89640DC6.idx  QMetaType.61311EB2F434BB2E.idx  QObject.694897C5B46CB430.idx  QPair.359FC175E618B3A2.idx  QSharedData.985597E0F25A7383.idx  QSharedDataPointer.A0732E4BB9D3F884.idx  QSharedPointer.FA102757BEFBB0F0.idx  QSslConfiguration.659A794FCA1CEB7E.idx  QSslSocket.154B2259D1B31979.idx  QString.C085312A10DCF5E5.idx  QStringList.B24B38D823D90CA8.idx  QTcpSocket.A2D3C551BD6C4ACB.idx  QUuid.33A27DAEBC40A0DF.idx  QVarLengthArray.04F9C9F81A51D89D.idx  QVector.46720B1B0BCDB2B8.idx  QtEndian.62A3631F3285E379.idx  QtGlobal.2D4D28B0453B3B37.idx  cmath.A0A08F382EA62983.idx  q23utility.h.B0C5EA4E39C5AEC6.idx  qabstractsocket.h.4DB5486B3755FBBB.idx  qbasictimer.h.C7328D17D575D201.idx  qbindingstorage.h.18526A559373AE38.idx  qbuffer.h.F5A3F3F609D3BD1F.idx  qbytearray.h.0168DED8D142614D.idx  qcalendar.h.28191188E7BC4562.idx  qchar.h.7B964AB1E8C02B1C.idx  qconfig_p.h.DBB469C45B85FF89.idx  qcontainerfwd.h.8858A22351318947.idx  qcontiguouscache.h.4D2C0458AB94A298.idx  qcoreevent.h.F6E21F4514B4D6F6.idx  qcryptographichash.h.572E590260DFC83E.idx  qdatastream.h.AFAF365A86B6519C.idx  qdatetime.h.A47F54C030EE39FB.idx  (+76 more)
qtmqtt5/src/build-mqtt-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/debug/: object_script.QtMqtt.Debug
qtmqtt5/src/build-mqtt-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/release/: object_script.QtMqtt.Release
quazip/: quazip.h  quazip.lib  unzip.h  zip.h
